<resources>
    <array name="mostalamat_type">
        <item>الكل</item>
        <item>طول الانتظار</item>
        <item>المستلمة</item>
        <item>المباعة</item>
    </array>
    <string name="app_name">Tasoug</string>
    <string name="ed_email">البريد الالكتروني</string>
    <string name="ed_pass">كلمة المرور</string>
    <string name="login_btn">تسجيل الدخول</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="mouchtarawat">مشتريات</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_montagat">منتجات</string>
    <string name="forniseur">موردين</string>
    <string name="btn_client">عملاء</string>
    <string name="masroufat">مصروفات</string>
    <string name="soundok">صندوق</string>
    <string name="statistique">إحصائيات</string>
    <string name="mabiat">مبيعات</string>
    <string name="option">إعدادات</string>
    <string name="orders">طلبات</string>
    <string name="home">الرئيسية</string>
    <string name="share_client">مشاركة تطبيق العملاء</string>
    <string name="share_fornis">مشاركة تطبيق الموردين</string>
    <string name="service">خدمة العملاء</string>
    <string name="logout">تسجيل الخروح</string>
    <string name="order_nb">رقم الطلب</string>
    <string name="active">تفعيل الحساب</string>
    <string name="comerce_name">الإسم التجاري</string>
    <string name="scour">الرصيد الحالي</string>
    <string name="filterBy">فلترة حسب</string>
    <string name="date">التاريخ</string>
    <string name="nb">الرقم</string>
    <string name="prodect">المنتج</string>
    <string name="count">الكمية</string>
    <string name="price">المبلغ</string>
    <string name="count1">مجموع المشتريات المكتملة</string>
    <string name="rs">ر.س</string>
    <string name="order">طلب</string>
    <string name="count2">مجموع المشتريات المفعل</string>
    <string name="count3">مجموع المشتريات المعلقة</string>

    <string name="count4">التكلفة الإجمالية</string>
    <string name="order_details">تفاصيل الطلب</string>
    <string name="order_user">صاحب الطلب</string>
    <string name="name">الاسم</string>
    <string name="phone">الهاتف</string>
    <string name="address">العنوان</string>
    <string name="prodect_list">المنتجات</string>
    <string name="contine">إتمام الطلب</string>
    <string name="cancel">إلغاء </string>
    <string name="date_ins">تاريخ التسجيل</string>
    <string name="total">المجموع</string>
    <string name="rest">المتبقي</string>
    <string name="bayed">المدفوغ</string>
    <string name="bayToForn">الدفع للمورد</string>
    <string name="total2">الإجمالي</string>
    <string name="basbousa">بسبوسة أم محمد</string>
    <string name="count_exis">الكمية المتواجدة</string>
    <string name="count_bayed">الكمية المباعة</string>
    <string name="categorie">بسبوسة</string>
    <string name="status_prod">حالة المنتج</string>
    <string name="active_in_store">تشغيل في المتجر</string>
    <string name="desactive_in_store">إيقاف من المتجر</string>
    <string name="save">حفظ</string>
    <string name="product_name">اسم المنتج</string>
    <string name="description">تفاصيل المنتج</string>
    <string name="take_img">أضف صور للمنتج</string>
    <string name="store_info">معلومات المحل</string>
    <string name="term">شروط اللإتفاقية مع الموردين</string>
    <string name="term_client">شروط اللإتفاقية مع المستخدمين</string>
    <string name="expenses">المصروفات</string>
    <string name="bonod_expenses">بنود المصروفات</string>
    <string name="username">إسم صاحب المحل</string>
    <string name="comerce_id">سجل صاحب المحل</string>
    <string name="store_name_ar">إسم المحل بالعربي</string>
    <string name="store_name_en">إسم المحل بالانجليزي</string>
    <string name="addres_name">إسم المدينة او المحافظة</string>
    <string name="store_phone">رقم جوال صاحب المحل</string>
    <string name="location_gegravique">إختار الموقع الجغرافي من الخريطة</string>
    <string name="store_logo">إرفع شعار المحل</string>
    <string name="term_bonod">بنود الإتفاقية</string>
    <string name="box">الصندوق</string>
    <string name="details">التفاصيل</string>
    <string name="elect_baymnt">مبالغ الدفع الإلكتروني</string>
    <string name="price_in_dore">المبلغ المتوفر بالدرج</string>
    <string name="terment_today">غلق الحساب لليوم</string>
    <string name="account">حساب الصرف</string>
    <string name="bayan">البيان</string>
    <string name="add_bande">إضافة بند جديد</string>
    <string name="bande">البند</string>
    <string name="bande_titel">عنوان البند</string>
    <string name="bande_body">نص البند</string>
    <string name="unite">الوحد</string>
    <string name="add_price">إضافة ثمن جديد</string>
    <string name="new_prod">منتج جديد</string>
    <string name="ed_email_or_phone">رقم الهاتف او البريد الإلكتروني</string>
    <string name="categories">الأصناف</string>
    <string name="noItem">لا يوجد</string>
    <string name="add_categorie">إضافة صنف جديد</string>
    <string name="quantity"> الكمية المطلوبة </string>
    <string name="client_in_store">زبون من المحل</string>
    <string name="noAddress">لا يوجد عنوان</string>
    <string name="mostalamat">مستلمات</string>
    <string name="accepte">قبول</string>
    <string name="del">رفض</string>
    <string name="title_activity_maps">Map</string>
    <string name="Execus">عذرا ...!</string>
    <string name="open_gps">قم بفتح ال GPS</string>
    <string name="go_to_sitting">الذهاب الى الاعدادات</string>
    <string name="empty">تصفير الحساب</string>
    <string name="given">المدفوع</string>
</resources>
