<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Views.Fragments.main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp">
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_option"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_option"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/option"
                    android:textColor="@color/text_grey"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_montagat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_montagat"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/btn_montagat"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_forniseur"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_forniseur"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/forniseur"
                    android:textColor="@color/text_grey"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp" />
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_client"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_client"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/btn_client"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_masroufat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_masroufat"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/masroufat"
                    android:textColor="@color/text_grey"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp" />
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_soundok"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_soundok"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/soundok"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp">
                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_mouch"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_mouchtarawat"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/mouchtarawat"
                    android:textColor="@color/text_grey"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp" />

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_mabiat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_mabiat"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/mabiat"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:weightSum="2"
                android:padding="10dp">

                <Button
                    android:layout_weight="1"
                    android:id="@+id/btn_mostalamat"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_orders"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="20dp"
                    android:text="@string/mostalamat"
                    android:textColor="@color/text_grey"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_orders"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_order"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/orders"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="right"
                android:weightSum="2"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_statistique"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bk_btn_menu"
                    android:drawableTop="@drawable/ic_statistique"
                    android:fontFamily="@font/saudi"
                    android:gravity="center"
                    android:paddingTop="30dp"
                    android:paddingBottom="20dp"
                    android:text="@string/statistique"
                    android:textColor="@color/text_grey"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>