<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bk_white"
    android:layout_gravity="start"
    android:paddingTop="30dp"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:clickable="true">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical"
        android:gravity="top"
        android:layout_gravity="top"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2"
            >

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_mouch"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bk_btn_menu2"
                android:drawableTop="@drawable/ic_mouchtarawat"
                android:fontFamily="@font/saudi"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/mouchtarawat"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />
            <Button
                android:onClick="onLabelClick"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:clickable="true"
                android:layout_weight="1"
                android:id="@+id/btn_forniseur"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bk_btn_menu2"
                android:drawableTop="@drawable/ic_forniseur"
                android:fontFamily="@font/saudi"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/forniseur"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:layout_weight="1"
                android:id="@+id/btn_orders"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bk_btn_menu2"
                android:drawableTop="@drawable/ic_orders"
                android:fontFamily="@font/saudi"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/orders"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_client"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/bk_btn_menu2"
                android:drawableTop="@drawable/ic_client"
                android:fontFamily="@font/saudi"
                android:gravity="center"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                android:text="@string/btn_client"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
    android:paddingRight="10dp"
        android:layout_height="wrap_content"

       android:gravity="center_vertical|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_home">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:onClick="onLabelClick"
            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_home"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shadoo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"

        android:gravity="center_vertical|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_option">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option"

            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_option"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shadoo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"

        android:gravity="center_vertical|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_share_client">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_client"

            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_share"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shadoo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"

        android:gravity="center_vertical|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_share_fornis">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share_fornis"

            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_share"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shadoo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:layout_height="wrap_content"

        android:gravity="center_vertical|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_service">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service"

            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_service"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/shadoo"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:paddingRight="10dp"
        android:layout_height="match_parent"

        android:gravity="bottom|right"
        android:background="@drawable/bk_btn_menu3"
        android:id="@+id/btn_logout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
android:layout_marginBottom="8dp"
            android:fontFamily="@font/saudi"
            android:paddingRight="10dp"
            android:textColor="@color/text_grey"
            android:textSize="16dp"/>
        <ImageView
            android:padding="10dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_logout"/>
    </LinearLayout>
</LinearLayout>