<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_activity"
    android:padding="20dp">
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:src="@drawable/ic_close_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/close_btn"
        android:scaleType="fitXY"/>
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/logo"
    app:layout_constraintTop_toTopOf="parent"
    android:layout_marginTop="80dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:id="@+id/logo"
  android:scaleType="center"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/logo"
        app:layout_constraintRight_toRightOf="@+id/logo"
        android:text="تسجيل الدخول"
        android:fontFamily="@font/saudi"
        android:textSize="18sp"
        android:textColor="@color/text_grey"
        android:id="@+id/t1"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
android:background="@drawable/ed_bk"
        android:id="@+id/ed_email"
        app:layout_constraintTop_toBottomOf="@+id/t1"
        android:layout_marginTop="50dp"
        android:hint="@string/ed_email"
        android:textColor="@color/text_grey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_email_icon"
        android:inputType="textEmailAddress"

        android:padding="5dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/ed_bk"
        android:id="@+id/ed_pass"
        app:layout_constraintTop_toBottomOf="@+id/ed_email"
        android:layout_marginTop="10dp"
        android:hint="@string/ed_pass"
        android:inputType="numberPassword"
        android:gravity="right|center"
        android:textColor="@color/text_grey"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:drawableLeft="@drawable/ic_pass_icon"
        android:padding="5dp"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_bk"
        app:layout_constraintTop_toBottomOf="@+id/ed_pass"
        android:id="@+id/login_btn"
        android:text="@string/login_btn"
        android:textColor="@color/text_white"
        android:textSize="18sp"
        android:fontFamily="@font/saudi"
        android:layout_marginTop="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/login_btn"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:id="@+id/progress"/>
</androidx.constraintlayout.widget.ConstraintLayout>